corrected header collapse and hamburger menu display

--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,6 +1,4 @@
 #footer {
-  margin-top: 100px;
-  margin-left: 375px;
   text-align: center;
   background-color: #dce3e2;
   padding: 3em 0 4em 0;
