--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -21,9 +21,6 @@
   position: fixed;
   text-align: right;
   top: 0;
-  width: 20%;
-  min-width: 250px;
-  max-width: 350px;
 }
 
   #header .top {
