--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -1,8 +1,34 @@
 
 /* Container */
 
+#header {
+  display: inline-block;
+  width: 350px;
+  height: 100%;
+}
+
+#main {
+  margin: 0px 0px 0px 350px;
+}
+
+#footer {
+  margin: 3em 0px 0px 350px;
+
+}
+
 .container {
-  margin: 0 auto;
+  margin: 2em auto;
   max-width: 100%;
   width: 100%;
+}
+
+section, header, footer {
+  margin: 3em auto;
+}
+
+#headerToggle {
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
 }
