--- a/public/assets/css/screens.css
+++ b/public/assets/css/screens.css
@@ -1413,11 +1413,6 @@
           font-size: 1.25em;
         }
   
-      /* header toggle */
-				#headerToggle {
-					display: none;
-				}
-  
       /* Footer */
   
         #footer {
@@ -1449,7 +1444,7 @@
   
     }
   
-    @media screen and (max-width: 360px) {
+    @media screen and (max-width: 480px) {
     /* Mobile */
       /* Basic */
   
@@ -1474,8 +1469,22 @@
           font-size: 1.25em;
         }
   
-      /* Main */
-  
+			/* Main */
+			
+			#main {
+				margin-left: 250px;
+				margin-right: -250px;
+				-moz-transform: translateX(-250px);
+				-webkit-transform: translateX(-250px);
+				-ms-transform: translateX(-250px);
+				transform: translateX(-250px);
+				-moz-transition: -moz-transform 0.5s ease;
+				-webkit-transition: -webkit-transform 0.5s ease;
+				-ms-transition: -ms-transform 0.5s ease;
+				transition: transform 0.5s ease;
+				-webkit-overflow-scrolling: touch;
+			}
+/*   
         #main > section {
           padding: 2em 0;
         }
@@ -1486,7 +1495,13 @@
   
           #main section.cover header {
             padding: 0 1em;
-          }
+          } */
+			
+			/* header toggle */
+			#headerToggle {
+				display: block;
+			}
+			
 			/* Header */
 			
 			#header {
@@ -1494,10 +1509,10 @@
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
 				backface-visibility: hidden;
-				-moz-transform: translateX(-275px);
-				-webkit-transform: translateX(-275px);
-				-ms-transform: translateX(-275px);
-				transform: translateX(-275px);
+				-moz-transform: translateX(-250px);
+				-webkit-transform: translateX(-250px);
+				-ms-transform: translateX(-250px);
+				transform: translateX(-250px);
 				-moz-transition: -moz-transform 0.5s ease;
 				-webkit-transition: -webkit-transform 0.5s ease;
 				-ms-transition: -ms-transform 0.5s ease;
@@ -1509,9 +1524,8 @@
 				overflow-y: auto;
 				position: fixed;
 				top: 0;
-				width: 275px;
+				width: 250px;
 				z-index: 10002;
-				width: 275px;
 				background: #222729 url("images/overlay.png");
 				box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
 			}
@@ -1534,79 +1548,7 @@
 
 			#nav ul li a {
 				padding: 0.5em 1.25em 0.5em 1.25em;
-			}
-
-			#headerToggle {
-				-moz-backface-visibility: hidden;
-				-webkit-backface-visibility: hidden;
-				-ms-backface-visibility: hidden;
-				backface-visibility: hidden;
-				-moz-transition: -moz-transform 0.5s ease;
-				-webkit-transition: -webkit-transform 0.5s ease;
-				-ms-transition: -ms-transform 0.5s ease;
-				transition: transform 0.5s ease;
-				display: block;
-				height: 2.25em;
-				left: 0;
-				position: fixed;
-				top: 0;
-				width: 3.25em;
-				z-index: 10001;
-			}
-
-				#headerToggle .toggle {
-					position: absolute;
-					left: 0;
-					top: 0;
-					width: 100%;
-					height: 100%;
-					outline: 0;
-					border: 0;
-				}
-
-					#headerToggle .toggle:before {
-						font-family: FontAwesome;
-						text-decoration: none;
-						font-style: normal;
-						font-weight: normal;
-						-webkit-font-smoothing: antialiased;
-						-moz-osx-font-smoothing: grayscale;
-						content: '\f0c9';
-						color: #fff;
-						font-size: 18px;
-						line-height: 2.25em;
-						background: rgba(128, 136, 144, 0.5);
-						border-radius: 0.35em;
-						text-align: center;
-						position: absolute;
-						left: 0.5em;
-						top: 0.5em;
-						display: block;
-						width: 3.25em;
-						height: 2.25em;
-						line-height: 2.25em;
-					}
-
-			body.header-visible #main {
-				-moz-transform: translateX(275px);
-				-webkit-transform: translateX(275px);
-				-ms-transform: translateX(275px);
-				transform: translateX(275px);
-			}
-
-			body.header-visible #headerToggle {
-				-moz-transform: translateX(275px);
-				-webkit-transform: translateX(275px);
-				-ms-transform: translateX(275px);
-				transform: translateX(275px);
-			}
-
-			body.header-visible #header {
-				-moz-transform: translateX(0);
-				-webkit-transform: translateX(0);
-				-ms-transform: translateX(0);
-				transform: translateX(0);
-			}
+			}			
 			
       /* Footer */
   
